# contrasted

./: .gitignore  LICENSE  README.md  annotate.py  make_db.py  pyproject.toml  train.py
benchmarking/: __init__.py  _style.py  _utils.py  prostt5_baseline.py  run_dbscan_t_hits.py
benchmarking/classification_accuracy/: compute_classification_sequence.py
configs/: __init__.py  annotate.yaml  config.yaml  embed.yaml  make_db.yaml  train.yaml  train_ctg_s30.yaml  train_s20_holdout40.yaml
configs/experiment/: class_balanced.yaml  proxy_anchor.yaml  supcon.yaml  warmup.yaml  warmup_balanced.yaml
configs/sweeps/: proxyanchor_sweep.yaml  supcon_sweep.yaml
contrasted/: __init__.py  callbacks.py  data.py  faiss_utils.py  losses.py  model.py  utils.py
data/cath_s30_split/: holdout_ids.txt  holdout_summary.json  holdout_superfamilies.txt  holdouts.fasta  summary.json  test.fasta  test_ids.txt  train_excl_holdouts_ids.txt  train_ids.txt  val.fasta  val_ids.txt
data/sequence-data/: cath-domain-sf-list.txt
notebooks/: cath-eda.ipynb
scripts/: assign_ted_cath.py  create_cath_datasets.py  download_cath_latest.sh  embed.py  embed_E1.py  embed_esm2_8m.py  embed_incremental.py  embed_lmdb.py  embed_multi_gpu.py  embed_prostt5.py  embed_prostt5_residue.py  embed_ted_prostt5_project.py  embed_ted_prostt5_raw.py  submit_embed_ted_prostt5_raw.sge
src/contrasted/: __init__.py  annotate.py  callbacks.py  checkpoint.py  data.py  embed.py  losses.py  make_db.py  model.py  search.py  tmalign.py  train.py  utils.py
tests/: test_annotate.py  test_data.py  test_embed.py  test_model.py  test_projection_head_io.py  test_search.py  test_training_smoke.py  test_utils.py
