[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contrasted"
version = "0.1.0"
description = "Supervised contrastive learning for CATH protein superfamily classification"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.2.0",
    "hydra-core>=1.3.0",
    "h5py>=3.0.0",
    "wandb>=0.15.0",
    "numpy>=1.20.0",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.0.0",
    "faiss-cpu>=1.7.0",
    "polars>=1.0.0",
    "tqdm>=4.60.0",
    "lmdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["contrasted", "benchmarking"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in argparse)
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["contrasted", "benchmarking"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
