[project]
name = "contrasted"
version = "0.1.0"
description = "Supervised contrastive learning for CATH protein superfamily classification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0,<2.6",
    "lightning>=2.6",
    "numpy>=1.20",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "torchmetrics>=1.0",
    "tqdm>=4.60",
    "polars>=1.0",
    "pillow>=12.1.0",
    "modal>=1.3.1",
    "lmdb>=1.7.5",
    "python-igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "scipy>=1.17.0",
    "scikit-learn>=1.8.0",
    "progres>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty",
]
plot = [
    "matplotlib>=3.10.8",
]
embed = [
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "modal>=0.60",
]
search = [
    "faiss-cpu>=1.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contrasted"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["contrasted"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

