[project]
name = "contrasted"
version = "0.1.0"
description = "Supervised contrastive learning for CATH protein superfamily classification"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.13"
authors = [{ name = "David Miller", email = "dmmiller597@gmail.com" }]
keywords = [
    "protein",
    "contrastive-learning",
    "cath",
    "protein-language-model",
    "knn",
    "pytorch"
]
dependencies = [
    "torch>=2.0,<2.6",
    "lightning>=2.6",
    "numpy>=1.20",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.25",
    "tqdm>=4.60",
]

[project.urls]
Repository = "https://github.com/dmmiller597/contrasted"
Issues = "https://github.com/dmmiller597/contrasted/issues"

[project.optional-dependencies]
embed = [
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "modal>=1.3.1",
]
# Optional dependencies used by the exploratory/analysis scripts under
# scripts/ (cluster analyses, plotting, structural validation, etc.).
# Not required to train, make a vector DB, annotate, or evaluate.
analysis = [
    "h5py>=3.11",
    "protspace>=2.1",
    "polars>=1.0",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.6",
    "python-igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "numba>=0.59",
    "llvmlite>=0.42",
    "biotite>=1.6.0",
    "progres>=1.1.0",
    "lmdb>=1.7.5",
    "pillow>=12.1.0",
    "modal>=1.3.1",
    "requests>=2.32",
]

[project.scripts]
contrasted-train = "contrasted.train:main"
contrasted-make-db = "contrasted.make_db:main"
contrasted-annotate = "contrasted.annotate:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contrasted"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["contrasted"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
